--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
 
 
 
-<p>Adresa našeg website je: https://amsterdamoil.github.io/information/.</p>
+<p>Adresa našeg website je:  https://konopljinoulje.github.io/information/.</p>
 
 
 
